<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_event"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/inputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_event_data"/>

    <Button
        android:id="@+id/dateTimePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_date_amp_time"/>

    <Button
        android:id="@+id/saveEditButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:backgroundTint="@color/blue"
        android:textColor="@android:color/white"/>
</LinearLayout>
