<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/inputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_data"/>

    <Button
        android:id="@+id/dateTimePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date_amp_time"/>

    <Button
        android:id="@+id/saveEventButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_event"
        android:backgroundTint="@color/blue"
        android:textColor="@android:color/white"/>
</LinearLayout>
